[build-system]
requires = ["setuptools>=65.5.1", "wheel", "poetry_core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Tensile"
version = "4.40.0"
description = "Tensile is a tool for creating benchmark-driven backend libraries for GEMMs"
authors = ["Rocm team"]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
packages = [
    { include = "Tensile", from = "src" },
]

include = [
    "src/Tensile/data/**/*",
]

[tool.poetry.dependencies]
python = ">=3.8"
toml = ">=0.10"
pyyaml = ">=6.0"
msgpack = ">=1.0"
joblib = ">=1.2"
pandas = ">=1.5"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"


[tool.poetry.scripts]
tensile = "Tensile.Tensile:main"
tensile_benchmark_cluster = "Tensile.TensileBenchmarkCluster:main"
tensile_client_config = "Tensile.TensileClientConfig:main"
tensile_create_library = "Tensile.TensileCreateLibrary:main"
tensile_generate_summations = "Tensile.GenerateSummations:main"
tensile_lib_logic_to_yaml = "Tensile.TensileLibLogicToYaml:main"
tensile_merge_library = "Tensile.TensileMergeLibrary:main"
tensile_retune_library = "Tensile.TensileRetuneLibrary:main"
tensile_update_library = "Tensile.TensileUpdateLibrary:main"